spacing on login/signup and password placeholder on login fixed

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,7 @@ h1 {
 
 .center-text { text-align: center; }
 
-.field { padding: 3% 0; }
+.field { padding: 1% 0; }
 
 .jPanelMenu-panel {
   height: 90%;
