--- a/app/assets/stylesheets/signin_login.css.scss
+++ b/app/assets/stylesheets/signin_login.css.scss
@@ -29,7 +29,7 @@ input {
   background-color: purple;
   border-radius: 3px;
   width: 30%;
-  margin: 2% auto;
+  margin: 1% auto;
   -webkit-transition: all 1s ease-in;
   -moz-transition: all 1s ease-in;
   -o-transition: all 1s ease-in;
@@ -77,3 +77,7 @@ input#user_password_confirmation {
   bottom: 40%;
 }
 
+#_sessions_email,
+#_sessions_password {
+  text-align: center;
+}
